sign up and Login hash+salt pass, services not pass

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -3,8 +3,9 @@ html
 	head
 		title= title
 		link(href='/css/main.css', rel='stylesheet')
+		
 	body#mainApp
-		//-header(ng-include="'/modules/core/views/header.client.view.jade'")
+		//- header(ng-include="'/modules/core/views/header.client.view.jade'")
 		if username
 			h2 Hello #{username}
 			div
@@ -44,12 +45,12 @@ html
 		//-ใส่เครื่องหมาย # หลัง /
 		script(type="text/javascript", src="/modules/core/core.client.module.js")
 		script(type="text/javascript", src="/modules/core/config/core.client.routes.js")
-		//-script(type="text/javascript", src="/modules/core/controllers/header.client.controller.js")
+		script(type="text/javascript", src="/modules/core/controllers/header.client.controller.js")
 		
 		script(type="text/javascript", src="/modules/users/users.client.module.js")
 		script(type="text/javascript", src="/modules/users/config/users.client.routes.js")
 		script(type="text/javascript", src="/modules/users/controllers/auth.client.controller.js")
-		//-script(type="text/javascript", src="/modules/users/services/auth.client.service.js")
+		script(type="text/javascript", src="/modules/users/services/auth.client.service.js")
 		
 		script(type="text/javascript", src="/modules/hello/hello.client.module.js") 
 		script(type="text/javascript", src="/modules/hello/config/hello.client.routes.js")
